--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "axios": "^1.8.1",
+    "dom": "^0.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "router": "^1.3.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
