--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@mui/material": "^6.4.8",
     "@reduxjs/toolkit": "^2.6.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,6 +17,7 @@
     "@types/react-dom": "^18.3.5",
     "axios": "^1.8.1",
     "dom": "^0.0.3",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.483.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
