--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "dom": "^0.0.3",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.22",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.483.0",
     "react": "^18.3.1",
